(fix): overflow issue with "subscribers" and "members"

--- a/src/app/modules/onboarding-v2/steps/channels/list/list.component.scss
+++ b/src/app/modules/onboarding-v2/steps/channels/list/list.component.scss
@@ -95,7 +95,6 @@ m-onboarding__channelList {
         display: block;
 
         height: 19px;
-        width: 92px;
         color: #9b9b9b;
         font-family: Roboto;
         font-size: 14px;
