--- a/src/app/modules/onboarding-v2/steps/groups/list/list.component.scss
+++ b/src/app/modules/onboarding-v2/steps/groups/list/list.component.scss
@@ -94,7 +94,6 @@ m-onboarding__groupList {
         display: block;
 
         height: 19px;
-        width: 92px;
         color: #9b9b9b;
         font-family: Roboto;
         font-size: 14px;
